hphp/test/zend/good/tests/classes/final_redeclare.php.expectf

Fatal error: Cannot override final method pass::show() in %s/final_redeclare.php on line 9
